expand shopify graphql and tier1 projection
